<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:id="@+id/frame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="50sp"
            android:gravity="center"
            android:text="@string/name"
            android:textColor="@color/purpletitle"/>


    </LinearLayout>
    <TextView

        android:id="@+id/season"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="15dp"
        android:text="@string/season"
        android:layout_below="@id/frame"
        android:textSize="20sp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="3dp"        />
    <TextView
        android:id="@+id/seasonrace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seasonrace"
        android:layout_below="@id/frame"
        android:layout_toEndOf="@id/season"
        android:textSize="20dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="3dp"
        />
    <TextView

        android:id="@+id/round"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="15dp"
        android:text="@string/round"
        android:layout_below="@id/season"
        android:textSize="20dp"
        android:layout_marginVertical="3dp"
        />
    <TextView
        android:id="@+id/roundrace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/roundrace"
        android:layout_below="@id/season"
        android:layout_toEndOf="@id/round"
        android:textSize="20dp"
        android:layout_marginVertical="3dp"
        />
    <TextView

        android:id="@+id/raceName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="15dp"
        android:text="@string/raceName"
        android:layout_below="@id/round"
        android:textSize="20dp"
        android:layout_marginVertical="3dp"

        />
    <TextView
        android:id="@+id/raceNamerace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/raceNamerace"
        android:layout_below="@id/round"
        android:layout_toEndOf="@id/raceName"
        android:textSize="20dp"
        android:layout_marginVertical="3dp"
        />
    <TextView

        android:id="@+id/locality"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="15dp"
        android:text="@string/locality"
        android:layout_below="@id/raceName"
        android:textSize="20dp"
        android:layout_marginVertical="3dp"
        />
    <TextView
        android:id="@+id/localityrace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/localityrace"
        android:layout_below="@id/raceName"
        android:layout_toEndOf="@id/locality"
        android:textSize="20dp"
        android:layout_marginVertical="3dp"
        />
    <TextView

        android:id="@+id/country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="15dp"
        android:text="@string/country"
        android:layout_below="@id/locality"
        android:textSize="20dp"
        android:layout_marginVertical="3dp"
        />
    <TextView
        android:id="@+id/countryrace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/countryrace"
        android:layout_below="@id/locality"
        android:layout_toEndOf="@id/country"
        android:textSize="20dp"
        android:layout_marginVertical="3dp"
        />
    <TextView

        android:id="@+id/first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="15dp"
        android:text="@string/first"
        android:layout_below="@id/country"
        android:textSize="20dp"
        android:layout_marginVertical="3dp"
        />
    <TextView
        android:id="@+id/firstrace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firstrace"
        android:layout_below="@id/country"
        android:layout_toEndOf="@id/first"
        android:textSize="20dp"
        android:layout_marginVertical="3dp"
        />
    <TextView

        android:id="@+id/timeFirst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="15dp"
        android:text="@string/timeFirst"
        android:layout_below="@id/first"
        android:textSize="20dp"
        android:layout_marginVertical="3dp"
        />
    <TextView
        android:id="@+id/timeFirstrace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timeFirstrace"
        android:layout_below="@id/first"
        android:layout_toEndOf="@id/timeFirst"
        android:textSize="20dp"
        android:layout_marginVertical="3dp"
        />
    <TextView

        android:id="@+id/constructorNameFirst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="15dp"
        android:text="@string/constructorNameFirst"
        android:layout_below="@id/timeFirst"
        android:textSize="20dp"
        android:layout_marginVertical="3dp"
        />
    <TextView
        android:id="@+id/constructorNameFirstrace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/constructorNameraceFirst"
        android:layout_below="@id/timeFirst"
        android:layout_toEndOf="@id/constructorNameFirst"
        android:textSize="20dp"
        android:layout_marginVertical="3dp"
        />
    <TextView

        android:id="@+id/second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="15dp"
        android:text="@string/second"
        android:layout_below="@id/constructorNameFirst"
        android:textSize="20dp"
        android:layout_marginVertical="3dp"
        />
    <TextView
        android:id="@+id/secondrace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/secondrace"
        android:layout_below="@id/constructorNameFirst"
        android:layout_toEndOf="@id/second"
        android:textSize="20dp"
        android:layout_marginVertical="3dp"
        />
    <TextView

        android:id="@+id/timeSecond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="15dp"
        android:text="@string/timeSecond"
        android:layout_below="@id/second"
        android:textSize="20dp"
        android:layout_marginVertical="3dp"
        />
    <TextView
        android:id="@+id/timeSecondrace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timeSecondrace"
        android:layout_below="@id/second"
        android:layout_toEndOf="@id/timeSecond"
        android:textSize="20dp"
        android:layout_marginVertical="3dp"
        />
    <TextView

        android:id="@+id/constructorNameSecond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="15dp"
        android:text="@string/constructorNameSecond"
        android:layout_below="@id/timeSecond"
        android:textSize="20dp"
        android:layout_marginVertical="3dp"
        />
    <TextView
        android:id="@+id/constructorNameSecondrace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/constructorNameraceSecond"
        android:layout_below="@id/timeSecond"
        android:layout_toEndOf="@id/constructorNameSecond"
        android:textSize="20dp"
        android:layout_marginVertical="3dp"
        />
    <TextView

        android:id="@+id/third"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="15dp"
        android:text="@string/third"
        android:layout_below="@id/constructorNameSecond"
        android:textSize="20dp"
        android:layout_marginVertical="3dp"
        />
    <TextView
        android:id="@+id/thirdrace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thirdrace"
        android:layout_below="@id/constructorNameSecond"
        android:layout_toEndOf="@id/third"
        android:textSize="20dp"
        android:layout_marginVertical="3dp"
        />
    <TextView

        android:id="@+id/timeThird"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="15dp"
        android:text="@string/timeThird"
        android:layout_below="@id/third"
        android:textSize="20dp"
        android:layout_marginVertical="3dp"
        />
    <TextView
        android:id="@+id/timeThirdrace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timeThirddrace"
        android:layout_below="@id/third"
        android:layout_toEndOf="@id/timeThird"
        android:textSize="20dp"
        android:layout_marginVertical="3dp"
        />

    <TextView

        android:id="@+id/constructorNameThird"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="15dp"
        android:text="@string/constructorNameThird"
        android:layout_below="@id/timeThird"
        android:textSize="20dp"
        android:layout_marginVertical="3dp"
        />
    <TextView
        android:id="@+id/constructorNameThirdrace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/constructorNameraceThird"
        android:layout_below="@id/timeThird"
        android:layout_toEndOf="@id/constructorNameThird"
        android:textSize="20dp"
        android:layout_marginVertical="3dp"
        />
   

    <androidx.appcompat.widget.Toolbar

        android:id="@+id/mytoolbar"
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:elevation="4dp"
        android:theme="?attr/actionBarTheme"
        android:layout_alignParentBottom="true"
        android:title="@string/home"
        android:background="@color/purplelogo"


        >

    </androidx.appcompat.widget.Toolbar>


</RelativeLayout>