<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item
        android:id="@+id/home" android:icon="@drawable/home"
        app:showAsAction="always" android:title="@string/home"/>
    <item
        android:id="@+id/user" android:icon="@drawable/user"
        app:showAsAction="always" android:title="@string/user"/>
    <item
        android:id="@+id/map" android:icon="@drawable/map"
        app:showAsAction="always" android:title="@string/map"/>
    <item
        android:id="@+id/mountaineer" android:icon="@drawable/mountaineer"
        app:showAsAction="always" android:title="@string/mountaineer"/>
</menu>